# yachtSQL

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  tsan_suppressions.txt
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  loom.yml  miri.yml  tsan.yml
benches/: baseline.rs  baseline_results.json
crates/yachtsql-arrow/: Cargo.toml  README.md
crates/yachtsql-arrow/src/: lib.rs  test_utils.rs
crates/yachtsql-cli/src/: main.rs
crates/yachtsql-common/src/: error.rs  lib.rs  result.rs  static_cell.rs
crates/yachtsql-datafusion-functions/: Cargo.toml  README.md
crates/yachtsql-datafusion-functions/src/: lib.rs
crates/yachtsql-datafusion-functions/src/aggregate/: mod.rs
crates/yachtsql-datafusion-functions/src/scalar/: conditional.rs  conversion.rs  datetime.rs  math.rs  mod.rs  string.rs
crates/yachtsql-datafusion-functions/src/window/: mod.rs
crates/yachtsql-datafusion/datafusion/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-catalog/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-common/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-common-runtime/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-doc/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-execution/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-expr/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-expr-common/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-functions/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-functions-aggregate/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-functions-aggregate-common/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-functions-nested/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-functions-table/: .cargo-checksum.json  Cargo.toml.orig
crates/yachtsql-datafusion/datafusion-functions-window/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-functions-window-common/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-macros/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-optimizer/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-physical-expr/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-physical-expr-common/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-physical-optimizer/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-physical-plan/: .cargo-checksum.json
crates/yachtsql-datafusion/datafusion-sql/: .cargo-checksum.json
crates/yachtsql-executor/: Cargo.toml
crates/yachtsql-executor/benches/: optimizer_speedup.rs  parallel_execution.rs  vs_datafusion.rs
crates/yachtsql-executor/src/: async_executor.rs  catalog.rs  concurrent_catalog.rs  concurrent_session.rs  constraint_validator.rs  datafusion_backend.rs  js_udf.rs  lib.rs  metrics.rs  physical_planner.rs  plan_cache.rs  py_udf.rs  session.rs  value_evaluator.rs
crates/yachtsql-functions/: Cargo.toml
crates/yachtsql-functions/src/: aggregate.rs  scalar.rs
crates/yachtsql-ir/: Cargo.toml
crates/yachtsql-ir/src/: lib.rs  schema.rs
crates/yachtsql-optimizer/: Cargo.toml
crates/yachtsql-optimizer/benches/: optimization_levels.rs  optimizer_bench.rs  optimizer_passes.rs
crates/yachtsql-optimizer/src/: lib.rs  optimized_logical_plan.rs  pass.rs  stats.rs  test_utils.rs  tests.rs
crates/yachtsql-optimizer/src/join_order/: cost_model.rs  greedy.rs  join_graph.rs  mod.rs  predicate_collector.rs
crates/yachtsql-optimizer/src/planner/: cte_optimization.rs  empty_propagation.rs  equi_join.rs  filter_merging.rs  into_logical.rs  mod.rs  physical_planner.rs  predicate.rs  projection_pushdown.rs  trivial_predicate.rs
crates/yachtsql-optimizer/src/planner/cost_based/: mod.rs  projection_pushdown.rs  short_circuit.rs
crates/yachtsql-optimizer/src/planner/rule_based/: aggregate_pushdown.rs  constant_folding.rs  cross_to_hash_join.rs  decorrelation.rs  distinct_elimination.rs  empty_propagation.rs  filter_pushdown_aggregate.rs  filter_pushdown_join.rs  filter_pushdown_project.rs  join_elimination.rs  limit_pushdown.rs  mod.rs  outer_to_inner_join.rs  predicate_inference.rs  predicate_simplification.rs  project_merging.rs  sort_elimination.rs  sort_pushdown_project.rs  subquery_unnesting.rs  topn_pushdown.rs
crates/yachtsql-parser/: Cargo.toml
crates/yachtsql-parser/src/: lib.rs
crates/yachtsql-parser/src/datafusion_converter/: expr_converter.rs  mod.rs  plan_converter.rs
crates/yachtsql-parser/src/expr_planner/: aggregates.rs  array.rs  binary.rs  case.rs  columns.rs  context.rs  datetime.rs  functions.rs  interval.rs  literals.rs  mod.rs  scalars.rs  structs.rs  subquery.rs  substitution.rs  types.rs  utils.rs  window.rs
crates/yachtsql-parser/src/planner/: dcl.rs  ddl.rs  dml.rs  mod.rs  scripting.rs
crates/yachtsql-parser/src/planner/query/: cte.rs  export.rs  from.rs  gap_fill.rs  mod.rs  order.rs  params.rs  projection.rs  sample.rs  types.rs
crates/yachtsql-parser/src/planner/query/aggregate/: canonical.rs  collect.rs  detection.rs  extract.rs  group_by.rs  mod.rs  qualify.rs
crates/yachtsql-sqlparser/: .cargo-checksum.json  Cargo.toml
crates/yachtsql-sqlparser-derive/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/yachtsql-sqlparser-derive/src/: lib.rs
crates/yachtsql-sqlparser/src/: keywords.rs  lib.rs  test_utils.rs  tokenizer.rs
crates/yachtsql-storage/: Cargo.toml
crates/yachtsql-storage/src/: bitmap.rs  lib.rs  record.rs  schema.rs
crates/yachtsql-test-utils/: Cargo.toml
crates/yachtsql-test-utils/src/: lib.rs
docs/design/: constraint-system.md  statistics-schema.md
src/: lib.rs
tests/: concurrent_tests.rs  test_helpers.rs
tests/bigquery/: catalog.rs  common.rs  main.rs
tests/bigquery/constraints/: mod.rs  not_null.rs  primary_key.rs  unique.rs
tests/bigquery/data_types/: bitmap.rs  bytes.rs  column_access.rs  column_ops.rs  literals.rs  mod.rs  storage.rs
tests/concurrent/: harness.rs  loom_models.rs  mod.rs  tests.rs
(+285 files in other folders)
