[package]
name = "yachtsql"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "YachtSQL - Lightweight in-memory SQL test database with columnar storage for rust programs"
repository = "https://github.com/alexchoi0/yachtsql"
homepage = "https://github.com/alexchoi0/yachtsql"
documentation = "https://docs.rs/yachtsql"
keywords = ["sql", "database", "bigquery", "test", "columnar"]
categories = ["database"]

[dependencies]
# Internal crates
yachtsql-common = { version = "0.1.4", path = "crates/yachtsql-common" }
yachtsql-arrow = { version = "0.1.4", path = "crates/yachtsql-arrow" }
yachtsql-ir = { version = "0.1.4", path = "crates/yachtsql-ir" }
yachtsql-parser = { version = "0.1.4", path = "crates/yachtsql-parser" }
yachtsql-functions = { version = "0.1.4", path = "crates/yachtsql-functions" }
yachtsql-datafusion-functions = { version = "0.1.4", path = "crates/yachtsql-datafusion-functions" }
yachtsql-executor = { version = "0.1.4", path = "crates/yachtsql-executor" }

# Arrow/DataFusion (arrow 53 to match datafusion 44)
arrow = { version = "53", default-features = false, features = ["prettyprint"] }
datafusion = "44"

sentry = "0.45.0"

# SQL parsing (BigQuery scripting support)
yachtsql-sqlparser = { path = "crates/yachtsql-sqlparser", features = ["visitor"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_path = "0.7"
toml = "0.8"

# Utilities
itertools = "0.13"
indexmap = { version = "2.12", features = ["serde"] }
hashbrown = "0.15"
ordered-float = "4.5"
natord = "1.0"
log = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.11"

# Random number generation
rand = "0.8"

# Decimal arithmetic for NUMERIC/DECIMAL types
rust_decimal = { version = "1.36", features = ["serde"] }

# UUID support
uuid = { version = "1.6", features = ["v4", "serde"] }

# Unicode normalization for collations
unicode-normalization = "0.1"

# SIMD alignment
aligned-vec = "0.6"

# Bloom filter
bloomfilter = "3.0"

# Fast non-cryptographic hash for probabilistic data structures
ahash = "0.8"
rustc-hash = "2.1"

# Cryptographic hash functions
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Non-cryptographic hash functions
farmhash = "1.1"

# Network operations
ipnetwork = "0.20"
url = "2.5"
publicsuffix = "2.2"
lazy_static = "1.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Geography/GIS support
geo = "0.28"
wkt = { version = "0.11", features = ["geo-types"] }
geojson = { version = "0.24", features = ["geo-types"] }
geohash = "0.13"


[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "sync"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
yachtsql-sqlparser = { path = "crates/yachtsql-sqlparser", features = ["visitor"] }
arrow = { version = "53", default-features = false }
parquet = { version = "53", default-features = false, features = ["arrow"] }
tempfile = "3.14"
yachtsql-test-utils = { version = "0.1.4", path = "crates/yachtsql-test-utils" }

[features]
default = []
loom = ["dep:loom"]

[dependencies.loom]
version = "0.7"
optional = true

[[bench]]
name = "baseline"
harness = false

# Linting configuration
# Run with: cargo clippy -- -D warnings
[lints.clippy]
# Enum-specific lints to enforce best practices
large-enum-variant = "warn"          # Alert when variant is >200 bytes larger than median
enum-variant-names = "warn"          # Enforce consistent enum variant naming
wildcard-enum-match-arm = "warn"     # Discourage wildcards in match (prefer exhaustive)

# Note: missing-docs is a rustc lint, not clippy, so configure separately if needed

[workspace]
members = [
    ".",
    "crates/yachtsql-arrow",
    "crates/yachtsql-cli",
    "crates/yachtsql-common",
    "crates/yachtsql-datafusion-functions",
    "crates/yachtsql-executor",
    "crates/yachtsql-functions",
    "crates/yachtsql-ir",
    "crates/yachtsql-parser",
    "crates/yachtsql-sqlparser",
    "crates/yachtsql-sqlparser-derive",
    "crates/yachtsql-test-utils",
]
resolver = "2"

[patch.crates-io]
datafusion = { path = "crates/yachtsql-datafusion/datafusion" }
datafusion-catalog = { path = "crates/yachtsql-datafusion/datafusion-catalog" }
datafusion-common = { path = "crates/yachtsql-datafusion/datafusion-common" }
datafusion-common-runtime = { path = "crates/yachtsql-datafusion/datafusion-common-runtime" }
datafusion-execution = { path = "crates/yachtsql-datafusion/datafusion-execution" }
datafusion-expr = { path = "crates/yachtsql-datafusion/datafusion-expr" }
datafusion-expr-common = { path = "crates/yachtsql-datafusion/datafusion-expr-common" }
datafusion-functions = { path = "crates/yachtsql-datafusion/datafusion-functions" }
datafusion-functions-aggregate = { path = "crates/yachtsql-datafusion/datafusion-functions-aggregate" }
datafusion-functions-aggregate-common = { path = "crates/yachtsql-datafusion/datafusion-functions-aggregate-common" }
datafusion-functions-nested = { path = "crates/yachtsql-datafusion/datafusion-functions-nested" }
datafusion-functions-table = { path = "crates/yachtsql-datafusion/datafusion-functions-table" }
datafusion-functions-window = { path = "crates/yachtsql-datafusion/datafusion-functions-window" }
datafusion-functions-window-common = { path = "crates/yachtsql-datafusion/datafusion-functions-window-common" }
datafusion-optimizer = { path = "crates/yachtsql-datafusion/datafusion-optimizer" }
datafusion-physical-expr = { path = "crates/yachtsql-datafusion/datafusion-physical-expr" }
datafusion-physical-expr-common = { path = "crates/yachtsql-datafusion/datafusion-physical-expr-common" }
datafusion-physical-optimizer = { path = "crates/yachtsql-datafusion/datafusion-physical-optimizer" }
datafusion-physical-plan = { path = "crates/yachtsql-datafusion/datafusion-physical-plan" }
datafusion-sql = { path = "crates/yachtsql-datafusion/datafusion-sql" }
datafusion-macros = { path = "crates/yachtsql-datafusion/datafusion-macros" }
datafusion-doc = { path = "crates/yachtsql-datafusion/datafusion-doc" }

