[package]
name = "yachtsql-datafusion-functions"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "BigQuery-compatible functions for DataFusion"
repository = "https://github.com/alexchoi0/yachtsql"
homepage = "https://github.com/alexchoi0/yachtsql"
documentation = "https://docs.rs/yachtsql-datafusion-functions"
keywords = ["sql", "database", "bigquery", "datafusion", "functions"]
categories = ["database"]

[dependencies]
arrow = { version = "54", default-features = false }
datafusion = "44"

chrono = "0.4"
chrono-tz = "0.10"
rust_decimal = "1.36"
uuid = { version = "1.6", features = ["v4"] }
regex = "1.11"
serde_json = "1.0"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

thiserror = "2.0"

[features]
default = ["core"]
core = []
json = []
network = []
encryption = []
all = ["core", "json", "network", "encryption"]
