[package]
name = "yachtsql-parser"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "SQL parser and planner for YachtSQL (BigQuery dialect)"
repository = "https://github.com/alexchoi0/yachtsql"
homepage = "https://github.com/alexchoi0/yachtsql"
documentation = "https://docs.rs/yachtsql-parser"
keywords = ["sql", "database", "bigquery", "parser"]
categories = ["database"]

[dependencies]
yachtsql-common = { version = "0.1.4", path = "../yachtsql-common" }
yachtsql-ir = { version = "0.1.4", path = "../yachtsql-ir" }
yachtsql-storage = { version = "0.1.4", path = "../yachtsql-storage" }

yachtsql-sqlparser = { path = "../yachtsql-sqlparser", features = ["visitor"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rust_decimal = { version = "1.36", features = ["serde"] }

chrono = "0.4"

ordered-float = { version = "4.5", features = ["serde"] }
hex = "0.4"
regex = "1"
rustc-hash = "2.1"
